--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Git Training</title>
+ <script src="js/main.js"></script> 
 </head>
 <body>
     <h1>Hello World!</h1>
